Responsiveness fix and added some push-down whitespace at the bottom to make it look better on mobile

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -104,3 +104,7 @@ body {
     right: 0;
     position:absolute;
 }
+
+.push-down {
+    height: 60px;
+}
